--- a/week-2/mandatory/api/cyf-ecommerce-api/package.json
+++ b/week-2/mandatory/api/cyf-ecommerce-api/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug":"nodemon server.js"
+    "debug": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "pg": "^8.7.3"
   },
